{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 57,
  "lineage": "8e1b572e-234e-705b-e94f-315089af3b6c",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "privatensg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1bade78d-e58a-48ff-b015-81fc75d62dc0/resourceGroups/etas_bosch_poc_rg/providers/Microsoft.Network/networkSecurityGroups/etas-nsgprv-qhjyxp",
            "location": "westeurope",
            "name": "etas-nsgprv-qhjyxp",
            "resource_group_name": "etas_bosch_poc_rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "Required for Databricks control plane communication with worker nodes.",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5557",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-control-plane-to-worker-proxy",
                "priority": 102,
                "protocol": "tcp",
                "source_address_prefix": "AzureDatabricks",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for Databricks control plane management of worker nodes.",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-control-plane-to-worker-ssh",
                "priority": 101,
                "protocol": "tcp",
                "source_address_prefix": "AzureDatabricks",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for worker communication with Azure Eventhub services.",
                "destination_address_prefix": "EventHub",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "9093",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-eventhub",
                "priority": 104,
                "protocol": "tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for worker nodes communication within a cluster.",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-worker-inbound",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for worker nodes communication within a cluster.",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-worker-outbound",
                "priority": 103,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for workers communication with Azure SQL services.",
                "destination_address_prefix": "Sql",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-sql",
                "priority": 101,
                "protocol": "tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for workers communication with Azure Storage services.",
                "destination_address_prefix": "Storage",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-storage",
                "priority": 102,
                "protocol": "tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for workers communication with Databricks Webapp.",
                "destination_address_prefix": "AzureDatabricks",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-databricks-webapp",
                "priority": 100,
                "protocol": "tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.etas_poc_rg",
            "random_string.postfix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "publicnsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1bade78d-e58a-48ff-b015-81fc75d62dc0/resourceGroups/etas_bosch_poc_rg/providers/Microsoft.Network/networkSecurityGroups/etas-nsgpub-qhjyxp",
            "location": "westeurope",
            "name": "etas-nsgpub-qhjyxp",
            "resource_group_name": "etas_bosch_poc_rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "Required for Databricks control plane communication with worker nodes.",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5557",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-control-plane-to-worker-proxy",
                "priority": 102,
                "protocol": "tcp",
                "source_address_prefix": "AzureDatabricks",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for Databricks control plane management of worker nodes.",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-control-plane-to-worker-ssh",
                "priority": 101,
                "protocol": "tcp",
                "source_address_prefix": "AzureDatabricks",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for worker communication with Azure Eventhub services.",
                "destination_address_prefix": "EventHub",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "9093",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-eventhub",
                "priority": 104,
                "protocol": "tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for worker nodes communication within a cluster.",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-worker-inbound",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for worker nodes communication within a cluster.",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-worker-outbound",
                "priority": 103,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for workers communication with Azure SQL services.",
                "destination_address_prefix": "Sql",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-sql",
                "priority": 101,
                "protocol": "tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for workers communication with Azure Storage services.",
                "destination_address_prefix": "Storage",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-storage",
                "priority": 102,
                "protocol": "tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for workers communication with Databricks Webapp.",
                "destination_address_prefix": "AzureDatabricks",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-databricks-webapp",
                "priority": 100,
                "protocol": "tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.etas_poc_rg",
            "random_string.postfix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "adbprv_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "100.68.194.192/26"
            ],
            "delegation": [
              {
                "name": "databricks-delegation",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action",
                      "Microsoft.Network/virtualNetworks/subnets/prepareNetworkPolicies/action",
                      "Microsoft.Network/virtualNetworks/subnets/unprepareNetworkPolicies/action"
                    ],
                    "name": "Microsoft.Databricks/workspaces"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1bade78d-e58a-48ff-b015-81fc75d62dc0/resourceGroups/etas_bosch_poc_rg/providers/Microsoft.Network/virtualNetworks/etas-vnet-qhjyxp/subnets/etas-adbprv-qhjyxp",
            "name": "etas-adbprv-qhjyxp",
            "resource_group_name": "etas_bosch_poc_rg",
            "service_endpoints": [
              "Microsoft.ContainerRegistry",
              "Microsoft.KeyVault",
              "Microsoft.Sql",
              "Microsoft.Storage"
            ],
            "virtual_network_name": "etas-vnet-qhjyxp"
          },
          "dependencies": [
            "azurerm_resource_group.etas_poc_rg",
            "azurerm_virtual_network.etas_vnet",
            "random_string.postfix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "adbpub_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "100.68.194.64/26"
            ],
            "delegation": [
              {
                "name": "databricks-delegation",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action",
                      "Microsoft.Network/virtualNetworks/subnets/prepareNetworkPolicies/action",
                      "Microsoft.Network/virtualNetworks/subnets/unprepareNetworkPolicies/action"
                    ],
                    "name": "Microsoft.Databricks/workspaces"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1bade78d-e58a-48ff-b015-81fc75d62dc0/resourceGroups/etas_bosch_poc_rg/providers/Microsoft.Network/virtualNetworks/etas-vnet-qhjyxp/subnets/etas-adbpub-qhjyxp",
            "name": "etas-adbpub-qhjyxp",
            "resource_group_name": "etas_bosch_poc_rg",
            "service_endpoints": [
              "Microsoft.ContainerRegistry",
              "Microsoft.KeyVault",
              "Microsoft.Sql",
              "Microsoft.Storage"
            ],
            "virtual_network_name": "etas-vnet-qhjyxp"
          },
          "dependencies": [
            "azurerm_resource_group.etas_poc_rg",
            "azurerm_virtual_network.etas_vnet",
            "random_string.postfix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "backend_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "100.68.194.128/27"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1bade78d-e58a-48ff-b015-81fc75d62dc0/resourceGroups/etas_bosch_poc_rg/providers/Microsoft.Network/virtualNetworks/etas-vnet-qhjyxp/subnets/etas-backend-subnet-qhjyxp",
            "name": "etas-backend-subnet-qhjyxp",
            "resource_group_name": "etas_bosch_poc_rg",
            "service_endpoints": [
              "Microsoft.ContainerRegistry",
              "Microsoft.KeyVault",
              "Microsoft.Sql",
              "Microsoft.Storage"
            ],
            "virtual_network_name": "etas-vnet-qhjyxp"
          },
          "dependencies": [
            "azurerm_resource_group.etas_poc_rg",
            "azurerm_virtual_network.etas_vnet",
            "random_string.postfix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "frontend_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "100.68.194.160/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1bade78d-e58a-48ff-b015-81fc75d62dc0/resourceGroups/etas_bosch_poc_rg/providers/Microsoft.Network/virtualNetworks/etas-vnet-qhjyxp/subnets/etas-frontend-subnet-qhjyxp",
            "name": "etas-frontend-subnet-qhjyxp",
            "resource_group_name": "etas_bosch_poc_rg",
            "service_endpoints": [
              "Microsoft.ContainerRegistry",
              "Microsoft.KeyVault",
              "Microsoft.Sql",
              "Microsoft.Storage"
            ],
            "virtual_network_name": "etas-vnet-qhjyxp"
          },
          "dependencies": [
            "azurerm_resource_group.etas_poc_rg",
            "azurerm_virtual_network.etas_vnet",
            "random_string.postfix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "privateasoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1bade78d-e58a-48ff-b015-81fc75d62dc0/resourceGroups/etas_bosch_poc_rg/providers/Microsoft.Network/virtualNetworks/etas-vnet-qhjyxp/subnets/etas-adbprv-qhjyxp",
            "network_security_group_id": "/subscriptions/1bade78d-e58a-48ff-b015-81fc75d62dc0/resourceGroups/etas_bosch_poc_rg/providers/Microsoft.Network/networkSecurityGroups/etas-nsgprv-qhjyxp",
            "subnet_id": "/subscriptions/1bade78d-e58a-48ff-b015-81fc75d62dc0/resourceGroups/etas_bosch_poc_rg/providers/Microsoft.Network/virtualNetworks/etas-vnet-qhjyxp/subnets/etas-adbprv-qhjyxp"
          },
          "dependencies": [
            "azurerm_network_security_group.privatensg",
            "azurerm_resource_group.etas_poc_rg",
            "azurerm_subnet.adbprv_subnet",
            "azurerm_virtual_network.etas_vnet",
            "random_string.postfix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "publicasoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1bade78d-e58a-48ff-b015-81fc75d62dc0/resourceGroups/etas_bosch_poc_rg/providers/Microsoft.Network/virtualNetworks/etas-vnet-qhjyxp/subnets/etas-adbpub-qhjyxp",
            "network_security_group_id": "/subscriptions/1bade78d-e58a-48ff-b015-81fc75d62dc0/resourceGroups/etas_bosch_poc_rg/providers/Microsoft.Network/networkSecurityGroups/etas-nsgpub-qhjyxp",
            "subnet_id": "/subscriptions/1bade78d-e58a-48ff-b015-81fc75d62dc0/resourceGroups/etas_bosch_poc_rg/providers/Microsoft.Network/virtualNetworks/etas-vnet-qhjyxp/subnets/etas-adbpub-qhjyxp"
          },
          "dependencies": [
            "azurerm_network_security_group.publicnsg",
            "azurerm_resource_group.etas_poc_rg",
            "azurerm_subnet.adbpub_subnet",
            "azurerm_virtual_network.etas_vnet",
            "random_string.postfix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "etas_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "100.68.194.0/24"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "c845974a-37e2-4870-96bf-40f76e535d7b",
            "id": "/subscriptions/1bade78d-e58a-48ff-b015-81fc75d62dc0/resourceGroups/etas_bosch_poc_rg/providers/Microsoft.Network/virtualNetworks/etas-vnet-qhjyxp",
            "location": "westeurope",
            "name": "etas-vnet-qhjyxp",
            "resource_group_name": "etas_bosch_poc_rg",
            "subnet": [
              {
                "address_prefix": "100.68.194.128/27",
                "id": "/subscriptions/1bade78d-e58a-48ff-b015-81fc75d62dc0/resourceGroups/etas_bosch_poc_rg/providers/Microsoft.Network/virtualNetworks/etas-vnet-qhjyxp/subnets/etas-backend-subnet-qhjyxp",
                "name": "etas-backend-subnet-qhjyxp"
              },
              {
                "address_prefix": "100.68.194.160/27",
                "id": "/subscriptions/1bade78d-e58a-48ff-b015-81fc75d62dc0/resourceGroups/etas_bosch_poc_rg/providers/Microsoft.Network/virtualNetworks/etas-vnet-qhjyxp/subnets/etas-frontend-subnet-qhjyxp",
                "name": "etas-frontend-subnet-qhjyxp"
              },
              {
                "address_prefix": "100.68.194.192/26",
                "id": "/subscriptions/1bade78d-e58a-48ff-b015-81fc75d62dc0/resourceGroups/etas_bosch_poc_rg/providers/Microsoft.Network/virtualNetworks/etas-vnet-qhjyxp/subnets/etas-adbprv-qhjyxp",
                "name": "etas-adbprv-qhjyxp",
                "security_group": "/subscriptions/1bade78d-e58a-48ff-b015-81fc75d62dc0/resourceGroups/etas_bosch_poc_rg/providers/Microsoft.Network/networkSecurityGroups/etas-nsgprv-qhjyxp"
              },
              {
                "address_prefix": "100.68.194.64/26",
                "id": "/subscriptions/1bade78d-e58a-48ff-b015-81fc75d62dc0/resourceGroups/etas_bosch_poc_rg/providers/Microsoft.Network/virtualNetworks/etas-vnet-qhjyxp/subnets/etas-adbpub-qhjyxp",
                "name": "etas-adbpub-qhjyxp",
                "security_group": "/subscriptions/1bade78d-e58a-48ff-b015-81fc75d62dc0/resourceGroups/etas_bosch_poc_rg/providers/Microsoft.Network/networkSecurityGroups/etas-nsgpub-qhjyxp"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.etas_poc_rg",
            "random_string.postfix"
          ]
        }
      ]
    }
  ]
}